/*
 * Copyright 2017 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package renderdemo;

option go_package = "renderdemo";

service Render {
  rpc RenderFrame (RenderRequest) returns (RenderResponse);
}

message RenderRequest {
  // GCS path to write output image into.
  string gcs_output_base = 1;

  // scene object file (in .obj format) GCS path
  string obj_path = 2;
  // assets (like material files and images) to be associated with the object
  repeated string assets = 3;

  // scene rotation (in radians)
  float rotation = 4;

  // num iterations
  int32 iterations = 5;
}

message RenderResponse {
  // GCS path image was written to.
  string gcs_output = 1;
}
